removed duplicates in lists